# bifrost

./: CMakeLists.txt
src/: CMakeLists.txt  ColorSet.hpp  UnitigMap.tcc
